fixed dragging of menu in game of life, fixed blockblast being to small on mobile

--- a/2048/style.css
+++ b/2048/style.css
@@ -5,6 +5,7 @@ body {
 	font-family: sans-serif;
 	overflow: hidden;
 	overscroll-behavior: none;
+	user-select: none;
 }
 canvas {
 	display: block;
